[package]
name = "bashelle"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
dialoguer = "0.12.0"
dirs = "6.0.0"
flate2 = "1.1.9"
indicatif = "0.18.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tar = "0.4.46"
ureq = "3.3.0"
